feat(): add solr

--- a/src/index.html
+++ b/src/index.html
@@ -41,8 +41,14 @@
                     <button id="flip-button" class="btn btn-primary">Flip Card</button>
                     <button id="next-card" class="btn btn-secondary">Next →</button>
                 </div>
+                <div class="pagination-controls">
+                    <button id="prev-page" class="btn btn-outline">← Previous 10</button>
+                    <span id="page-info">Page 1 of 1</span>
+                    <button id="next-page" class="btn btn-outline">Next 10 →</button>
+                </div>
                 <div class="progress-info">
                     <span id="card-counter">1 / 10</span>
+                    <span id="total-vocab">Total: 0 words</span>
                 </div>
             </div>
         </main>
